# esp32s3_simple_demo

./: README.md
doc/: 进度说明.txt
src/: CMakeLists.txt  sdkconfig  sdkconfig.old
src/main/: CMakeLists.txt
src/main/app/: app_main.c
src/main/app/hci/cmd/: cmd_api.h  cmd_config.c  cmd_file.c  cmd_ota.c  cmd_show.c  cmd_user.c  cmd_utest.c
src/main/app/hci/key/: hal_key.c  hal_key.h
src/main/app/hci/uMenu/: uMenu.c  uMenu.h
src/main/app/oam/: oam_thread.c  oam_thread.h
src/main/app/system/: console.c
src/main/app/system/inc/: console.h
